<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_activity">

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.example.securify.ui.activity.ActivityFragment"
        android:label="@string/activity"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/navigation_blacklist"
        android:name="com.example.securify.ui.blacklist.BlackListFragment"
        android:label="@string/blacklist"
        tools:layout="@layout/fragment_blacklist" />

    <fragment
        android:id="@+id/navigation_whitelist"
        android:name="com.example.securify.ui.whitelist.WhiteListFragment"
        android:label="@string/whitelist"
        tools:layout="@layout/fragment_whitelist" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.securify.ui.statistics.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics"/>
</navigation>