<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ActivityFragment">

    <TextView
        android:id="@+id/text_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/activity"
        android:textColor="@color/black"
        />

    <ToggleButton
        android:id="@+id/toggle"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/text_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/filter_button"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:drawableEnd="@drawable/ic_drop_down"
        android:drawablePadding="10dp"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:layout_below="@id/toggle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <View
        android:id="@+id/activity_divider"
        android:layout_width="390dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/filter_button"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/activity_list_titles"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/activity_divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/domain_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:textSize="18sp"
            android:text="Domain"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/timestamp_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:textSize="18sp"
            android:text="@string/timestamp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/list_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:textSize="18sp"
            android:text="@string/list"
            android:textColor="@color/black"/>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/activity_domain_list"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/activity_list_titles"
        android:layout_above="@id/load_more_button"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/load_more_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/load_more"
        android:textSize="10sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>